# bitset-task

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  constants.env  init-repo.sh  update-repo.sh
.github/workflows/: cpp.yml
ci-extra/: build.sh  check-lines.sh  test-valgrind.sh  test.sh  update-tests.sh
cmake/: CompilerWarnings.cmake  ConfigureCompiler.cmake  ConfigureTarget.cmake  FetchVcpkg.cmake  GenerateToolchain.cmake  SetupToolchain.cmake
cmake/toolchain-templates/: ci.cmake.in
cmake/vcpkg-triplet-templates/: ct-x64-linux.cmake.in
src/: bitset-iterator.h  bitset-reference.h  bitset-view.h  bitset.cpp  bitset.h
test/: .clang-format  bitset-test.cpp  constructors-test.cpp  iteration-test.cpp  operations-test.cpp  template-instantiation-test.cpp  test-helpers.cpp  test-helpers.h  to-string-test.cpp  traits-test.cpp
